<resources>
    <string name="app_name" translatable="false">Use Time</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Kirill</string>
    <!--    <string name="nav_header_subtitle" translatable="false">Master</string>-->
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="cat_image_content_description" translatable="false">Cat Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_app_list">Applications</string>
    <string name="app_label">app_label</string>
    <string name="app_icon_description">App Icon</string>
    <string name="menu_pattern_list">Patterns</string>
    <string name="new_rule">NEW RULE</string>
    <string name="menu_rule_list">Rules</string>
    <string name="vertical_days_label">ПН \n ВТ \n СР \n ЧТ \n ПТ \n СБ \n ВС</string>
    <string name="menu_rulelist">"Rules "</string>
    <string name="menu_edit_rule">Edit rule</string>
    <string name="menu_edit_category">Edit category</string>
    <string name="no_category_name">No category</string>
    <string name="no_limit_rile_name">No limit</string>
    <string name="new_category">NEW CATEGORY</string>
    <string name="menu_category_list">Categories</string>
    <string name="card_button_edit">Edit</string>
    <string name="card_button_remove">Remove</string>
    <string name="card_button_track_app">Track app</string>
    <string name="monday_cut">Mon</string>
    <string name="tuesday_cut">Tue</string>
    <string name="wednesday_cut">Wed</string>
    <string name="thursday_cut">Thu</string>
    <string name="friday_cut">Fri</string>
    <string name="saturday_cut">Sat</string>
    <string name="sunday_cut">Sun</string>
    <string name="edit_category_name_label">Category name</string>
    <string name="edit_category_name_hint">Enter the category name</string>
    <string name="edit_category_rule_label">Time limit rule</string>
    <string name="edit_category_save_button">Save</string>
    <string name="edit_category_cancel_button">Cancel</string>
    <string name="edit_category_choose_rule_warning">Choose a rule</string>
    <string name="edit_category_name_empty_warning">Name cannot be empty</string>
    <string name="edit_category_name_exists_warning">The name is already exist</string>
    <string name="edit_category_unable_delete_used">You cannot delete a category that is used in a application</string>
    <string name="edit_rule_name_label">Rule name</string>
    <string name="edit_rule_name_hint">Enter the rule name</string>
    <string name="edit_rule_time_limit_label">Time limit by day of the week</string>
    <string name="edit_rule_unable_delete_used">You cannot delete a rule that is used in a category</string>
    <string name="edit_time_limit_no_name_rule">Noname rule</string>
    <string name="edit_time_limit_label_text">%s time limit</string>
    <string name="edit_time_limit_label_monday">Monday</string>
    <string name="edit_time_limit_label_tuesday">Tuesday</string>
    <string name="edit_time_limit_label_wednesday">Wednesday</string>
    <string name="edit_time_limit_label_thursday">Thursday</string>
    <string name="edit_time_limit_label_friday">Friday</string>
    <string name="edit_time_limit_label_saturday">Saturday</string>
    <string name="edit_time_limit_label_sunday">Sunday</string>
    <string name="track_new_app_label">Track application</string>
    <string name="track_new_app_category_label">Category</string>
    <string name="track_new_app_choose_category_warning">Chose category</string>
    <string name="track_new_app_categories_not_found_warning">You must create at least one category before enabling
        usage time tracking
    </string>
    <string name="untrack_app_label">Disable App Tracking</string>
    <string name="untracked_app">UNTRACKED APPLICATIONS</string>
    <string name="tracked_apps">TRACKED APPLICATIONS</string>
    <string name="menu_stats">Statistics</string>
    <string name="statistics_label">Satistics</string>
    <string name="stat_usage_hour_sign">h</string>
    <string name="stat_usage_minute_sign">m</string>
    <string name="message_dialog_default_error_title">Error</string>
    <string name="message_dialog_default_warning_title">Warning</string>
    <string name="message_dialog_default_positive_button_title" translatable="false">OK</string>
    <string name="goal_completed_number_label">Соблюдение правил:</string>
    <string name="today_home_time_stats_label">Сегодня вы провели в отслеживаемых приложениях</string>
    <string name="yesterday_home_time_stats_label">Вчера вы провели в отслеживаемых приложениях</string>
    <string name="life_scale_item" translatable="false">life_scale_item</string>
    <string name="user_level0">Новичок</string>
    <string name="user_level1">Новичок 2</string>
    <string name="user_level2">Продолжающий</string>
    <string name="user_level3">Продолжающий 2</string>
    <string name="user_level4">Опытный</string>
    <string name="user_level5">Ветеран</string>
    <string name="user_level6">Мастер</string>
    <string name="user_level7">Легенда</string>
    <string name="loading">Loading…</string>

    <string-array name="statsPeriods">
        <item>Week</item>
        <item>Day</item>
    </string-array>
</resources>
