<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_applist"
            android:icon="@drawable/ic_menu_applications"
            android:title="@string/menu_app_list" />

        <item
            android:id="@+id/nav_rule_list"
            android:icon="@drawable/ic_menu_rules"
            android:title="@string/menu_rule_list" />

        <item
            android:id="@+id/nav_category_list"
            android:icon="@drawable/ic_menu_categories"
            android:title="@string/menu_category_list" />

        <item
                android:id="@+id/nav_short_stats_list"
                android:icon="@drawable/ic_menu_stats"
                android:title="@string/menu_stats" />
    </group>
</menu>