<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:id="@+id/rule_body">

    <TextView
        android:id="@+id/rule_card_title"
        style="@style/Theme.CardTitle" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_desc_margin_start"
        android:columnCount="7"
        android:columnOrderPreserved="false">

        <TextView
            style="@style/Theme.CardDescDay"
            android:text="@string/monday_cut" />

        <TextView
            style="@style/Theme.CardDescDay"
            android:text="@string/tuesday_cut" />

        <TextView
            style="@style/Theme.CardDescDay"
            android:text="@string/wednesday_cut" />

        <TextView
            style="@style/Theme.CardDescDay"
            android:text="@string/thursday_cut" />

        <TextView
            style="@style/Theme.CardDescDay"
            android:text="@string/friday_cut" />

        <TextView
            style="@style/Theme.CardDescDay"
            android:text="@string/saturday_cut" />

        <TextView
            style="@style/Theme.CardDescDay"
            android:text="@string/sunday_cut" />

        <TextView
            android:id="@+id/monday_time_limit"
            style="@style/Theme.CardDescDay" />

        <TextView
            android:id="@+id/tuesday_time_limit"
            style="@style/Theme.CardDescDay" />

        <TextView
            android:id="@+id/wednesday_time_limit"
            style="@style/Theme.CardDescDay" />

        <TextView
            android:id="@+id/thursday_time_limit"
            style="@style/Theme.CardDescDay" />

        <TextView
            android:id="@+id/friday_time_limit"
            style="@style/Theme.CardDescDay" />

        <TextView
            android:id="@+id/saturday_time_limit"
            style="@style/Theme.CardDescDay" />

        <TextView
            android:id="@+id/sunday_time_limit"
            style="@style/Theme.CardDescDay" />
    </GridLayout>
</LinearLayout>