<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.EditDialog"
    tools:context=".ui.planning.rulelist.EditRuleFragment">

    <TextView
        android:id="@+id/edit_rule_title_desc"
        style="@style/Theme.EditDialogStaticContent.Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/edit_rule_name_label" />

    <EditText
        android:id="@+id/edit_rule_label"
        style="@style/Theme.EditDialogField.Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_rule_title_desc"
        android:hint="@string/edit_rule_name_hint"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/edit_rule_content_desc"
        style="@style/Theme.EditDialogStaticContent.Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_rule_label"
        android:text="@string/edit_rule_time_limit_label" />


    <GridLayout
        style="@style/Theme.EditDialogStaticContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_rule_content_desc"
        app:layout_constraintBottom_toTopOf="@id/edit_rule_button_set"
        android:columnCount="2"
        android:columnOrderPreserved="false">

        <LinearLayout
            android:id="@+id/monday_time_cell"
            style="@style/Theme.EditTimeLimitDialog.DayCell">

            <TextView
                style="@style/Theme.EditTimeLimitDialog.DayText.Desc"
                android:text="@string/monday_cut" />

            <TextView
                android:id="@+id/monday_time_limit"
                style="@style/Theme.EditTimeLimitDialog.DayText.Field" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tuesday_time_cell"
            style="@style/Theme.EditTimeLimitDialog.DayCell">

            <TextView
                style="@style/Theme.EditTimeLimitDialog.DayText.Desc"
                android:text="@string/tuesday_cut" />

            <TextView
                android:id="@+id/tuesday_time_limit"
                style="@style/Theme.EditTimeLimitDialog.DayText.Field" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wednesday_time_cell"
            style="@style/Theme.EditTimeLimitDialog.DayCell">

            <TextView
                style="@style/Theme.EditTimeLimitDialog.DayText.Desc"
                android:text="@string/wednesday_cut" />

            <TextView
                android:id="@+id/wednesday_time_limit"
                style="@style/Theme.EditTimeLimitDialog.DayText.Field" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thursday_time_cell"
            style="@style/Theme.EditTimeLimitDialog.DayCell">

            <TextView
                style="@style/Theme.EditTimeLimitDialog.DayText.Desc"
                android:text="@string/thursday_cut" />

            <TextView
                android:id="@+id/thursday_time_limit"
                style="@style/Theme.EditTimeLimitDialog.DayText.Field" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/friday_time_cell"
            style="@style/Theme.EditTimeLimitDialog.DayCell">

            <TextView
                style="@style/Theme.EditTimeLimitDialog.DayText.Desc"
                android:text="@string/friday_cut" />

            <TextView
                android:id="@+id/friday_time_limit"
                style="@style/Theme.EditTimeLimitDialog.DayText.Field" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/saturday_time_cell"
            style="@style/Theme.EditTimeLimitDialog.DayCell">

            <TextView
                style="@style/Theme.EditTimeLimitDialog.DayText.Desc"
                android:text="@string/saturday_cut" />

            <TextView
                android:id="@+id/saturday_time_limit"
                style="@style/Theme.EditTimeLimitDialog.DayText.Field" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sunday_time_cell"
            style="@style/Theme.EditTimeLimitDialog.DayCell"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1">

            <TextView
                style="@style/Theme.EditTimeLimitDialog.DayText.Desc"
                android:text="@string/sunday_cut" />

            <TextView
                android:id="@+id/sunday_time_limit"
                style="@style/Theme.EditTimeLimitDialog.DayText.Field" />
        </LinearLayout>
    </GridLayout>

    <LinearLayout
        android:id="@+id/edit_rule_button_set"
        style="@style/Theme.EditDialogStaticContent.ButtonSet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/cancel_rule_edition_button"
            style="@style/Theme.EditDialogButton"
            android:text="@string/edit_category_cancel_button" />

        <Button
            android:id="@+id/confirm_rule_edition_button"
            style="@style/Theme.EditDialogButton"
            android:text="@string/edit_category_save_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>