<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.EditDialog"
    tools:context=".ui.planning.categorylist.EditCategoryFragment">

    <TextView
        android:id="@+id/edit_category_title_desc"
        style="@style/Theme.EditDialogStaticContent.Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/edit_category_name_label" />

    <EditText
        android:id="@+id/dialog_category_label"
        style="@style/Theme.EditDialogField.Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_category_title_desc"
        android:hint="@string/edit_category_name_hint"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/edit_category_content_desc"
        style="@style/Theme.EditDialogStaticContent.Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_category_label"
        android:text="@string/edit_category_rule_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rule_list_in_category_dialog"
        style="@style/Theme.EditDialogStaticContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/edit_category_content_desc"
        app:layout_constraintBottom_toTopOf="@id/edit_category_button_set"
        app:layout_constraintHeight_min="@dimen/edit_dialog_list_view_min_height"
        app:layout_constraintHeight_max="@dimen/edit_dialog_list_view_max_height"
        tools:listitem="@layout/rule_in_category_dialog" />

    <LinearLayout
        android:id="@+id/edit_category_button_set"
        style="@style/Theme.EditDialogStaticContent.ButtonSet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/cancel_category_dialog_button"
            style="@style/Theme.EditDialogButton"
            android:text="@string/edit_category_cancel_button" />

        <Button
            android:id="@+id/confirm_category_dialog_button"
            style="@style/Theme.EditDialogButton"
            android:text="@string/edit_category_save_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>