<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.EditDialog"
    android:id="@+id/track_new_app_dialog_fragment"
    tools:context=".ui.applist.TrackNewAppDialog">

    <TextView
        android:id="@+id/track_new_app_title_desc"
        style="@style/Theme.EditDialogStaticContent.Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/track_new_app_label" />

    <TextView
        android:id="@+id/dialog_app_name"
        style="@style/Theme.EditDialogStaticContent.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/track_new_app_title_desc" />

    <TextView
        android:id="@+id/track_new_app_content_desc"
        style="@style/Theme.EditDialogStaticContent.Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_app_name"
        android:text="@string/track_new_app_category_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_list_in_dialog"
        style="@style/Theme.EditDialogStaticContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/track_new_app_content_desc"
        app:layout_constraintBottom_toTopOf="@id/track_new_app_button_set"
        app:layout_constraintHeight_min="@dimen/edit_dialog_list_view_min_height"
        app:layout_constraintHeight_max="@dimen/edit_dialog_list_view_max_height"
        tools:listitem="@layout/category_in_dialog_label" />

    <LinearLayout
        android:id="@+id/track_new_app_button_set"
        style="@style/Theme.EditDialogStaticContent.ButtonSet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/cancel_dialog_button"
            style="@style/Theme.EditDialogButton"
            android:text="@string/edit_category_cancel_button" />

        <Button
            android:id="@+id/add_dialog_button"
            style="@style/Theme.EditDialogButton"
            android:text="@string/edit_category_save_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>