<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/Theme.CardView.Outer">

    <LinearLayout style="@style/Theme.CardView.InnerLayout">
        <ImageView
                android:id="@+id/app_icon_in_stats"
                android:layout_width="@dimen/app_list_icon_size"
                android:layout_height="@dimen/app_list_icon_size"
                android:layout_weight="0"
                android:layout_marginStart="@dimen/card_desc_margin_start"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_icon_description"
                android:src="@mipmap/ic_launcher"
                android:layout_marginEnd="15dp"
        />

        <TextView
                android:id="@+id/app_label_in_stats"
                style="@style/Theme.CardTitle"
                android:gravity="start"
                android:layout_gravity="center"
                android:layout_weight="1" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0">

            <TextView
                    android:id="@+id/hour_val_in_app_stats"
                    style="@style/Theme.CardStatsText.TimeValue.Hours"
                    app:layout_constraintEnd_toStartOf="@+id/hour_label_in_app_stats"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                    android:id="@+id/hour_label_in_app_stats"
                    style="@style/Theme.CardStatsText.TimeSign"
                    android:layout_width="12dp"
                    android:text="@string/stat_usage_hour_sign"
                    app:layout_constraintEnd_toStartOf="@+id/minute_val_in_app_stats"
                    app:layout_constraintBaseline_toBaselineOf="@+id/hour_val_in_app_stats"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                    android:id="@+id/minute_val_in_app_stats"
                    style="@style/Theme.CardStatsText.TimeValue.Minutes"
                    app:layout_constraintEnd_toStartOf="@+id/minute_label_in_app_stats"
                    app:layout_constraintBaseline_toBaselineOf="@+id/hour_val_in_app_stats"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                    android:id="@+id/minute_label_in_app_stats"
                    style="@style/Theme.CardStatsText.TimeSign"
                    android:text="@string/stat_usage_minute_sign"
                    android:layout_width="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/hour_val_in_app_stats"
                    app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>